[gd_scene load_steps=5 format=3 uid="uid://cabk7tunntrfq"]

[ext_resource type="Script" uid="uid://d35n3g6db3l5x" path="res://scripts/sign.gd" id="1_8yyji"]
[ext_resource type="Texture2D" uid="uid://busk4wfy7i7nl" path="res://assets/sprites/world_tileset.png" id="2_ge2pc"]
[ext_resource type="FontFile" uid="uid://cbt5xvtsjjscv" path="res://assets/fonts/PixelOperator8.ttf" id="3_qkam6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxv3t"]
size = Vector2(1800, 1750)

[node name="Sign" type="Area2D"]
visibility_layer = 2
scale = Vector2(0.2, 0.2)
collision_mask = 2
script = ExtResource("1_8yyji")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -25)
scale = Vector2(0.1, 0.1)
shape = SubResource("RectangleShape2D_qxv3t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.10543e-15, -3.8147e-06)
scale = Vector2(5.71429, 5.71428)
texture = ExtResource("2_ge2pc")
region_enabled = true
region_rect = Rect2(129, 50, 14, 14)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -90.0
offset_right = 75.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
z_index = 5
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_qkam6")
text = "hello"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
